api/crates/postgres/tests/integration/media/snapshots/integration__media__fetch_all__desc_succeeds.snap
---
source: crates/postgres/tests/integration/media/fetch_all.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
ORDER BY
  "created_at" DESC,
  "id" DESC
LIMIT
  $1'''
rows_affected = 3
rows_returned = 3
