api/crates/postgres/tests/integration/media/snapshots/integration__media__fetch_all__until_asc_succeeds.snap
---
source: crates/postgres/tests/integration/media/fetch_all.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
WHERE
  ("created_at", "id") < ($1, $2)
ORDER BY
  "created_at" DESC,
  "id" DESC
LIMIT
  $3'''
rows_affected = 2
rows_returned = 2
